--- a/k8s-specifications/result-service.yaml
+++ b/k8s-specifications/result-service.yaml
@@ -4,12 +4,12 @@ metadata:
   labels:
     app: result
   name: result
+  namespace: voting-app
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
   - name: "result-service"
-    port: 8081
-    targetPort: 80
-    nodePort: 31001
+    port: 3000
+    targetPort: 3000
   selector:
     app: result
