--- a/k8s-specifications/vote-deployment.yaml
+++ b/k8s-specifications/vote-deployment.yaml
@@ -4,6 +4,7 @@ metadata:
   labels:
     app: vote
   name: vote
+  namespace: voting-app
 spec:
   replicas: 1
   selector:
@@ -15,8 +16,8 @@ spec:
         app: vote
     spec:
       containers:
-      - image: dockersamples/examplevotingapp_vote
+      - image: image-registry.openshift-image-registry.svc:5000/voting-app/example-voting-app-vote:latest
         name: vote
         ports:
-        - containerPort: 80
+        - containerPort: 3000
           name: vote
