--- a/k8s-specifications/vote-service.yaml
+++ b/k8s-specifications/vote-service.yaml
@@ -4,13 +4,13 @@ metadata:
   labels:
     app: vote
   name: vote
+  namespace: voting-app
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
   - name: "vote-service"
-    port: 8080
-    targetPort: 80
-    nodePort: 31000
+    port: 3000
+    targetPort: 3000
   selector:
     app: vote
   
