* Sysdig - remediate worker for control "Container with writable root file system"

--- a/k8s-specifications/worker-deployment.yaml
+++ b/k8s-specifications/worker-deployment.yaml
@@ -18,3 +18,5 @@ spec:
       containers:
       - image: dockersamples/examplevotingapp_worker
         name: worker
+        securityContext:
+          readOnlyRootFilesystem: true
