* Sysdig - remediate result for control "Container with writable root file system"

--- a/k8s-specifications/result-deployment.yaml
+++ b/k8s-specifications/result-deployment.yaml
@@ -21,3 +21,5 @@ spec:
         ports:
         - containerPort: 3000
           name: result
+        securityContext:
+          readOnlyRootFilesystem: true
